--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,23 @@
   
 </head>
 <body>
-<section class="cid-qCbDExULM2 mbr-fullscreen" id="header15-1d" data-rv-view="2107">
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110265987-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110265987-1');
+</script>
+
+
+<!-- /Google Analytics -->
+
+
+<section class="cid-qCbDExULM2 mbr-fullscreen" id="header15-1d" data-rv-view="206">
 
     
 
@@ -39,7 +55,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="6xpLNIF5YWADm3IUmWEFwJp1SjK6olWXIyBUYgDcem+SnF/Y8h7cPvgto2vJ9ywt2e6UAizOre+LFU2LRU4vFsBJ7Jp0NM0gcQvDlZsZSn4eDX0UasMuJKIG1Jw+205D">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="59o/MBJ0540cv3j/Cme3oAwc7iFlivTBlnr/8ratWRCMRDvd5xIYlaNNlqgUmwuWXt5sNSzu9PJ5SxraclB//mie048Vkoyh2hp1y0y4m8+WSLwg2ZSDFSHGYurR3FhP">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-1d">
@@ -73,7 +89,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
