--- a/page1.html
+++ b/page1.html
@@ -21,23 +21,7 @@
   
 </head>
 <body>
-
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110265987-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-110265987-1');
-</script>
-
-
-<!-- /Google Analytics -->
-
-
-<section class="cid-qCbDExULM2 mbr-fullscreen" id="header15-1d" data-rv-view="435">
+<section class="cid-qCbDExULM2 mbr-fullscreen" id="header15-1d" data-rv-view="2071">
 
     
 
@@ -55,7 +39,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="P89r1/KlE6Hbn0aBHWxNR8/t43eUX3yc7ES+bcXynfCjhFYnfBG3EWYsvNEdc3yxF8cHTK4MwS8CebKS+eclJMNoQRZnf9v5huYL2NPoQQ38pxfwXcXw2UjXgg/H7nFY">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="iMIAQ1ei+tBF6KuXA/reK/qfjfCoA+7A/KHfa4DbTVpNdN5Z/CSGFpHEJQQmMYBGyvdTIkalDCfnBKpzzIe95jYsMm4l3rJfO1aSMLusHUAhVzrKZHiwRsS8C3Sxh+E4">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-1d">
@@ -89,7 +73,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
