create github pages

--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-<section class="cid-qCbDExULM2 mbr-fullscreen" id="header15-1d" data-rv-view="975">
+<section class="cid-qCbDExULM2 mbr-fullscreen" id="header15-1d" data-rv-view="2523">
 
     
 
@@ -39,7 +39,7 @@
             <div data-form-alert="" hidden="" class="align-center">
                 Thanks for filling out the form!
             </div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="Kgoys3if1ieSjhsYsTcZ4E+hdNPx/ouhLPwcGh49FuxipRlhX1bVOsp4IWqLEur/DERBRD1mTJe7CUzGsMZefRAcnCn9btOkdeZUuHBO5hXUP/6vau3CnDyPZU/ITC5G">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="ytpuyCvGHhoIx1Ese0MlmLuDY65Q3RbdUixKRzVutr+glUqBOX3AjSQ0d2I/oyi0+aiWMXPivi+y2xGod12Qf5iK13zqAo9E16A8JgJwwWVd5s3DWJPwAFtsma4j/Et2">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name" required="" id="name-header15-1d">
@@ -73,7 +73,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
